✅ Refactor signal evaluation and output wiring
- Ensured signal allocation and content writing are traceable and consistent
- Added logging to verify signal contents at each stage
- Rewrote naming pass to maintain correct global/local signal semantics
- Confirmed conditional logic paths yield correct output values
- Verified destination signals are allocated once and reused as expected
- Outputs now safely skip redundant writes; system stabilizes cleanly

This commit sets a stable baseline for future output propagation and side-effect control.

--- a/meson.build
+++ b/meson.build
@@ -16,6 +16,7 @@ deps = [sqlite3_dep, crypto_dep, dl_dep, vulkan_dep]
 # --- Sources ---
 rcnode_sources = files(
   'src/main.c',
+  'src/eval_util.c',
   'src/eval.c',
   'src/spirv.c',
   'src/sexpr_parser.c',
@@ -48,6 +49,7 @@ rcnode_bin = executable('rcnode',
 validate_sources = files(
   'src/validate_sexpr.c',
   'src/sexpr_parser.c',
+  'src/eval_util.c',
   'src/eval.c',
   'src/log.c'
 )
