refactoring to remove Signal and complex pointer movement, outputs not propagating yet

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ deps = [sqlite3_dep, crypto_dep, dl_dep, vulkan_dep]
 rcnode_sources = files(
   'src/main.c',
   'src/eval_util.c',
+  'src/rewrite_util.c',
   'src/eval.c',
   'src/spirv.c',
   'src/sexpr_parser.c',
@@ -50,6 +51,7 @@ validate_sources = files(
   'src/validate_sexpr.c',
   'src/sexpr_parser.c',
   'src/eval_util.c',
+  'src/rewrite_util.c',
   'src/eval.c',
   'src/log.c'
 )
