adding global signal map

--- a/meson.build
+++ b/meson.build
@@ -22,7 +22,9 @@ rcnode_sources = files(
   'src/eval_util.c',
   'src/rewrite_util.c',
   'src/string_list.c',
+  'src/signal_map.c',
   'src/pubsub.c',
+  'src/signal.c',
   'src/gap.c',
   'src/eval.c',
   'src/emit_spirv.c',
